== Version 2.4.16 Work in progress (not released -- this is a draft) ==

  Users side :
  ------------
    # Apps :
        * Activities :
            - The "automatic subject" feature avoids deleted Organisations.
        * Tickets :
            - In list-view, the background color for important tickets was broken.


== Version 2.4.15 ==

  Users side :
  ------------
    # In list-views, columns related to sub-fields of ManyToManyFields were sortable ;
      it caused crashes & other strange behaviors.
    # In EntityFilter :
        - There was an issue with sub-filters & ManyToManyFields (entities could be displayed several times in the list-view).
        - The description of conditions with ForeignKey + "is not empty" has been fixed.
    # The image entity selector was broken on Chrome: the newly uploaded file was not selected.
    # A small issue in the password reset system has been fixed ;
      the confirmation page still displayed a 'submit' button when the link was not valid anymore.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # The view which returns choices for enumerable models uses credentials with CremeEntities.


== Version 2.4.14 ==

  Users side :
  ------------
    # The HTML directive to not be indexed by search engine has been added.
    # Some validation issues with bulk-edition have been fixed.
      It could be observed when editing several Invoices at once for example.
    # There were permissions issues with EntityFilters & HeaderFilters ;
      public filters could be edited/deleted by users with no app permission.
    # The selector with lazy-loading should perform less queries (delay raised to 300ms).
    # There was a broken link in CremePropertyType detail-view.
    # In the "About" page :
        - the IRC address  has been fixed.
        - the version is displayed only when you are authenticated.
    # Apps :
        * Billing :